# Hasklab

./: LICENSE  hasklab.cabal  stack.yaml
app/: Main.hs
src/: Matrix.hs  Parse.hs  Plot.hs  Transform.hs  Tree.hs
