name:                hasklab
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/filipklepo/hasklab#readme
license:             BSD3
license-file:        LICENSE
author:              Filip Klepo
maintainer:          filipklepo@gmail.com
copyright:           2017 Filip Klepo
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tree
                     , Parse
                     , Transform
                     , Plot
  build-depends:       base >= 4.7 && < 5
                     , Chart-gtk == 1.8.1
                     , Chart == 1.8.1
  default-language:    Haskell2010

executable hasklab-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasklab
  default-language:    Haskell2010

test-suite hasklab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasklab
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/filipklepo/hasklab
